[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/line_manager.gd" type="Script" id=1]
[ext_resource path="res://assets/img/ground.svg" type="Texture" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.190909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="line_manager" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20
antialiased = true

[node name="line_to_player" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 0.5
default_color = Color( 0.152941, 1, 0.0588235, 1 )
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 20
antialiased = true

[node name="bezier_manage_1" type="Node2D" parent="."]

[node name="txt" type="Label" parent="bezier_manage_1"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 1.72702, 1.72702 )
text = "aeaez"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bezier_point" type="Sprite" parent="bezier_manage_1"]
modulate = Color( 0.913725, 1, 0.160784, 1 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )

[node name="bezier_line" type="Line2D" parent="bezier_manage_1"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.913725, 1, 0.160784, 1 )

[node name="bezier_manage_2" type="Node2D" parent="."]

[node name="txt" type="Label" parent="bezier_manage_2"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 1.72702, 1.72702 )
text = "aeaez"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bezier_point" type="Sprite" parent="bezier_manage_2"]
modulate = Color( 0.972549, 0.513726, 1, 1 )
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 2 )

[node name="bezier_line" type="Line2D" parent="bezier_manage_2"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.972549, 0.513726, 1, 1 )
